--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.4",
+    "firebase": "^9.8.2",
+    "firebase-admin": "^10.2.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
