--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.6.4",
     "firebase": "^9.8.2",
     "firebase-admin": "^10.2.0",
+    "material-icons": "^1.11.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
