--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.32.1",
     "react-is": "^17.0.2",
     "styled-components": "^5.2.3"
   },
