--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@firebase/auth-types": "^0.11.0",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.6.4",
     "firebase": "^9.8.2",
