--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@firebase/auth-types": "^0.11.0",
+    "@hookform/resolvers": "^2.9.1",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.6.4",
     "firebase": "^9.8.2",
@@ -19,7 +20,8 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.32.1",
     "react-is": "^17.0.2",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
