--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@firebase/auth-types": "^0.11.0",
     "@hookform/resolvers": "^2.9.1",
     "@mui/icons-material": "^5.8.3",
-    "@mui/material": "^5.6.4",
+    "@mui/material": "^5.10.4",
     "firebase": "^9.8.2",
     "firebase-admin": "^10.2.0",
     "material-icons": "^1.11.1",
-    "next": "latest",
+    "next": "^12.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.32.1",
