--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/node": "^17.0.23",
     "@types/react": "^18.0.1",
+    "cypress": "^12.3.0",
     "typescript": "^4.6.3"
   }
 }
